# github-activity-rs

./: Cargo.toml  readme.md
src/: args.rs  filter.rs  format.rs  github.graphql  github.rs  main.rs  schema.graphql
src/github/: mod.rs  tests.rs
