[package]
name = "github-activity-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
graphql_client = { version = "0.13", features = ["reqwest"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.97"
log = "0.4.26"
env_logger = "0.11.7"
regex = "1.11.1"
futures = "0.3.31"
